# KiViDB-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: codeql.yml  msvc.yml
src/: main.cpp
src/api/: api.cpp  api.hpp  handlers.hpp
src/core/: core.cpp  core.hpp  core_utils.cpp
src/datatypes/: Cluster.cpp  Cluster.hpp  ClusterArray.cpp  ClusterArray.hpp  Document.hpp
test/: tests.hpp
